Add automated create record Add routing on account click

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -58,6 +58,8 @@
       rel="stylesheet"
       type="text/css"
     />
+    <!-- DEBUG -->
+    <script src="http://localhost:8097"></script>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
